--- a/libxc.bib
+++ b/libxc.bib
@@ -854,6 +854,18 @@
   url = "https://doi.org/10.1039/B810189B"
 }
 
+@article{Chai2009_174105,
+author = {Chai,Jeng-Da  and Head-Gordon,Martin },
+title = {Long-range corrected double-hybrid density functionals},
+journal = {J. Chem. Phys.},
+volume = {131},
+number = {17},
+pages = {174105},
+year = {2009},
+doi = "10.1063/1.3244209",
+url = "https://doi.org/10.1063/1.3244209"
+}
+
 @article{Chai2012_121,
   author = {Jeng-Da Chai and Shan-Ping Mao},
   title = {Seeking for reliable double-hybrid density functionals without fitting parameters: The {PBE}0-2 functional},
